# remotekeyboard

./: .gitignore  README.md  app.py  index.html  main.ts  package.json  pnpm-lock.yaml  requirements.txt  styles.css  tsconfig.json  vite.config.ts
.github/workflows/: package.yaml  package.yml  publish.yml
app/: index.html  package.json  pnpm-lock.yaml
arduino/: arduino.ino
esp/: esp.ino
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
