[package]
name = "remotekeyboard"
version = "1.0.2"
description = "A remotely controlled keyboard."
authors = ["japicraft"]
license = "MIT"

[lib]
name = "remotekeyboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
