[package]
name = "remotekeyboard"
version = "1.0.2"
description = "A remotely controlled keyboard."
authors = ["japicraft"]
license = "MIT"
edition = "2021"

[lib]
name = "remotekeyboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
